--- a/dashboarding/docker-compose.yml
+++ b/dashboarding/docker-compose.yml
@@ -3,19 +3,19 @@ version: "3"
 
 services:
   prometheus:
-    image: prom/prometheus:latest
+    image: prom/prometheus:v2.41.0
     container_name: prometheus
     ports:
       - "9090:9090"
     volumes:
-      - ./prometheus-data:/config
-      - prometheus-data:/prometheus
+      - ./prometheus-data/config:/config
+      - ./prometheus-data:/prometheus
     restart: unless-stopped
     command:
       - "--config.file=/config/prometheus.yml"
 
   grafana:
-    image: grafana/grafana:latest
+    image: grafana/grafana:9.3.2-ubuntu
     container_name: grafana
     ports:
       - "3000:3000"
