--- a/dashboarding/prometheus-data/config/prometheus.yml
+++ b/dashboarding/prometheus-data/config/prometheus.yml
@@ -2,7 +2,13 @@ global:
   scrape_interval: 15s # scrape every 15 seconds.
 
 scrape_configs:
+  # default exporter
   - job_name: "prometheus"
     scrape_interval: 5s
     static_configs:
       - targets: ["localhost:9090"]
+
+  # node exporter
+  - job_name: "node_exporter"
+    static_configs:
+      - targets: ["node_exporter:9100"]
